k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-service
  labels:
    service: ingress-test-service
    role: app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ingress-test-service
      role: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: ingress-test-service
        role: app
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: belazar13/tic-tak-toe:echo-service-3
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: lb-ingress-test-service
  labels:
    service: event-ingress-test-service
    role: app
spec:
  type: LoadBalancer
  selector:
    service: ingress-test-service
    role: app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
