k8s/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-ingress-test-service
  labels:
    service: event-ingress-test-service
    role: app
spec:
  type: ClusterIP
  selector:
    service: ingress-test-service
    role: app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
